--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -13,3 +13,28 @@ services:
       - ../app:/code/app
     restart: "no"
     command: uvicorn app.main:app --host 0.0.0.0 --port 80 --reload
+    depends_on:
+      mysql_database:
+        condition: service_healthy
+
+  mysql_database:
+    image: mysql:8.3
+    restart: unless-stopped
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_DATABASE: 'db'
+      MYSQL_USER: 'mysql'
+      MYSQL_PASSWORD: 'mysql'
+      MYSQL_ROOT_PASSWORD: 'mysql'
+    ports:
+      - '3306:3306'
+    volumes:
+      - mysql_database:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
+
+volumes:
+  mysql_database:
+    name: mysql_database
