--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,8 +24,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12"
-        
-    - name: Install dependencies
+         - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
@@ -34,7 +33,6 @@ jobs:
     - name: Format with Black
       run: black .
 
-
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -42,13 +40,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-    - name: Verify with flake8
-      run: flake8 .
-      
-    - name: Test with pytest
-      run: |
-        pytest
-
     - name: Test with pytest and coverage
       run: |
-        pytest --cov=. --cov-report=term
+        pytest --cov=app --cov-report=term --cov-fail-under=100
