--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
-annotated-types>=0.6.0
-asgiref>=3.8.1
-certifi>=2024.2.2
-click>=8.1.7
-fastapi>=0.68.2
-greenlet>=3.0.3
-h11>=0.14.0
-install>=1.3.5
-mysql-connector-python>=8.3.0
-pydantic>=2.7.1
-pydantic-settings>=2.2.1
-pydantic_core>=2.18.2
-python-dateutil>=2.9.0.post0
-python-dotenv>=1.0.1
-setuptools>=69.1.1
-sib-api-v3-sdk>=7.6.0
-six>=1.16.0
-SQLAlchemy>=2.0.29
-starlette>=0.14.2
-typing_extensions>=4.10.0
-urllib3>=2.2.1
-uvicorn>=0.15.0
-wheel>=0.43.0
+alembic==1.13.1
+asgiref==3.8.1
+certifi==2024.2.2
+click==8.1.7
+fastapi==0.68.2
+greenlet==3.0.3
+h11==0.14.0
+pydantic==1.10.14
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+setuptools==69.1.1
+sib-api-v3-sdk==7.6.0
+six==1.16.0
+SQLAlchemy==2.0.29
+starlette==0.14.2
+typing_extensions==4.10.0
+urllib3==2.2.1
+uvicorn==0.15.0
+wheel==0.43.0
+mysql-connector-python==8.3.0
+pydantic-settings==2.2.1
+load-dotenv==0.1.0
