--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,59 @@
 alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.3.0
 asgiref==3.8.1
 certifi==2024.2.2
 click==8.1.7
-fastapi==0.68.2
+dnspython==2.6.1
+ecdsa==0.19.0
+email_validator==2.1.1
+fastapi==0.111.0
+fastapi-cli==0.0.3
 greenlet==3.0.3
 h11==0.14.0
-pydantic==1.10.14
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+install==1.3.5
+Jinja2==3.1.4
+jose==1.0.0
+load-dotenv==0.1.0
+Mako==1.3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+mysql-connector-python==8.4.0
+orjson==3.10.3
+passlib==1.7.4
+pyasn1==0.6.0
+pydantic==2.7.1
+pydantic-settings==2.2.1
+pydantic_core==2.18.2
+Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-setuptools==69.1.1
+python-jose==3.3.0
+python-multipart==0.0.9
+PyYAML==6.0.1
+rich==13.7.1
+rsa==4.9
+setuptools==69.5.1
+shellingham==1.5.4
 sib-api-v3-sdk==7.6.0
 six==1.16.0
-SQLAlchemy==2.0.29
-starlette==0.14.2
-typing_extensions==4.10.0
+sniffio==1.3.1
+SQLAlchemy==2.0.30
+starlette==0.37.2
+typer==0.12.3
+types-passlib==1.7.7.20240327
+types-pyasn1==0.6.0.20240402
+types-python-jose==3.3.4.20240106
+typing_extensions==4.11.0
+ujson==5.10.0
 urllib3==2.2.1
-uvicorn==0.15.0
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
 wheel==0.43.0
-mysql-connector-python==8.3.0
-pydantic-settings==2.2.1
