--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.12
 
 WORKDIR /code
 
-COPY ./requirements.txt /code/requirements.txt
+# COPY ./requirements.txt /code/requirements.txt
+COPY ./requirements_lock.txt /code/requirements_lock.txt
 
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip install --no-cache-dir  -r /code/requirements_lock.txt
 
 COPY ./app /code/app
 
