--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,34 @@
-alembic==1.13.1
+alembic==1.13.3
+annotated-types==0.7.0
+anyio==4.6.2.post1
 asgiref==3.8.1
-certifi==2024.2.2
+certifi==2024.8.30
 click==8.1.7
-fastapi==0.68.2
-greenlet==3.0.3
+ecdsa==0.19.0
+fastapi==0.115.2
+greenlet==3.1.1
 h11==0.14.0
-pydantic==1.10.14
+idna==3.10
+Mako==1.3.5
+MarkupSafe==3.0.1
+mysql-connector-python==9.0.0
+passlib==1.7.4
+pyasn1==0.6.1
+pydantic==2.9.2
+pydantic-settings==2.5.2
+pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-setuptools==69.1.1
+python-jose==3.3.0
+python-multipart==0.0.12
+rsa==4.9
+setuptools==75.1.0
 sib-api-v3-sdk==7.6.0
 six==1.16.0
-SQLAlchemy==2.0.29
-starlette==0.14.2
-typing_extensions==4.10.0
-urllib3==2.2.1
-uvicorn==0.15.0
-wheel==0.43.0
-mysql-connector-python==8.3.0
-pydantic-settings==2.2.1
+sniffio==1.3.1
+SQLAlchemy==2.0.35
+starlette==0.39.2
+typing_extensions==4.12.2
+urllib3==2.2.3
+uvicorn==0.31.1
+wheel==0.44.0
