--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,18 +32,6 @@ jobs:
     - name: Format with Black
       run: black .
 
-    - name: Set environment variables (just for testing)
-      run: |
-        export DB_DRIVER=postgresql
-        export DB_USERNAME=test_user
-        export DB_PASSWORD=test_password
-        export DB_HOST=localhost
-        export DB_PORT=5432
-        export DB_DATABASE=test_db
-        export JWT_SECRETE_KEY=test_secret_key
-        export PASSWORD_HASH_ALGORITHM=HS256
-        export JWT_EXPIRE_MINUTES=30
-
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -51,6 +39,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-    - name: Test with pytest and coverage
-      run: |
-        pytest --cov=app --cov-report=term --cov-fail-under=100
+#    - name: Test with pytest and coverage
+#      run: |
+#        pytest --cov=app --cov-report=term --cov-fail-under=100
