--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,31 +14,36 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
         python-version: "3.12"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest black pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Format with Black
-      run: black .
-
-    - name: Lint with flake8
+    - name: Set Environment Variables for Testing
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        echo "PORT=8000" >> $GITHUB_ENV
+        echo "DEBUG=1" >> $GITHUB_ENV
+        echo "DB_DRIVER=mysql+mysqlconnector" >> $GITHUB_ENV
+        echo "DB_USERNAME=mysql" >> $GITHUB_ENV
+        echo "DB_PASSWORD=mysql" >> $GITHUB_ENV
+        echo "DB_HOST=mysql_database" >> $GITHUB_ENV
+        echo "DB_PORT=3306" >> $GITHUB_ENV
+        echo "DB_DATABASE=db" >> $GITHUB_ENV
+        echo "JWT_SECRETE_KEY=testestestestetsteste" >> $GITHUB_ENV
+        echo "PASSWORD_HASH_ALGORITHM=HS256" >> $GITHUB_ENV
+        echo "JWT_EXPIRE_MINUTES=30" >> $GITHUB_ENV
 
-#    - name: Test with pytest and coverage
-#      run: |
-#        pytest --cov=app --cov-report=term --cov-fail-under=100
+    - name: Test with pytest and coverage
+      run: |
+        pytest --cov=app --cov-report=term --cov-fail-under=100
